fix study modal overflow

--- a/ui/analyse/css/study/_modal.scss
+++ b/ui/analyse/css/study/_modal.scss
@@ -7,6 +7,7 @@
         padding-top: 80px;
       }
     }
+    overflow-y: auto;
   }
   h2 {
     margin-bottom: .5em;
